# axel

./: .editorconfig  .gitignore  .indent.pro  .travis.yml  AUTHORS  Brewfile  CHANGES  CONTRIBUTING.md  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.to-contribute  ROADMAP  UPDATE-CHECK  VERSION  acinclude.m4  aclocal.m4  autogen.sh  axel  axel.1  axel.c  axel.h  axelrc.example  compat-android.h  compat-bsd.h  compat-ssl.h  compat-win32.h  conf.c  config.h.in  configure  configure.ac  conn.c  conn.h  de.po  (+13 more)
.github/: FUNDING.yml
.github/workflows/: changelog.yaml  codeql.yml  coverage.yaml  lint.yaml  makefile(cygwin未成功源码).yml1  makefile(msys2成功源码).yml1  makefile(msys2未成功源码).yml1  makefile(成功cygwin).yml1  makefile(成功msys2).yml1  makefile.yml  release-packaging.yaml  test.yaml
branches/1.x/: Makefile  conn.c  http.c
branches/2.x/: CHANGES  Makefile  axel.c  axel.h  configure  de.po  http.c  text.c  zh_CN.po
branches/2.x/gui/kapt/: Makefile
branches/3.x-broken/: API  Makefile  ROADMAP  axel.h  configure  http.c  nl.po
branches/3.x-broken/cli/: text.c
branches/3.x-broken/doc/: CHANGES  CREDITS  ROADMAP  axel.1
branches/3.x-broken/i18n/: ru.po  zh_cn.po
branches/3.x-broken/src/: axel.c  axel.h  conf.c  conf.h  conn.c  conn.h  ftp.c  ftp.h  helper.c  helper.h  http.c  http.h  libs.h  messages.c  messages.h  proto.c  proto.h  search.c  search.h  tcp.c  url.c  url.h  urllist.c  urllist.h
branches/3.x-broken/test/: test_helper.c  test_helper.h  test_url.c  test_url.h  test_urllist.c  test_urllist.h  tests.c  tests.h
doc/: API  Makefile  Makefile.am  ROADMAP  UPDATE-CHECK  axel.txt  axelrc.example
gui/kapt/: axel-kapt  axel-kapt.1  axel-kapt.desktop
lib/: ASN1_STRING_get0_data.c  strlcat.c  strlcpy.c
man/: Makefile  axel.1  axel.header  axel.txt  genallman.sh  generate-man.sh
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  README-to-translate  axel.pot  de.po  es.po  id.po  id_ID.po  it.po  ja.po  ka.po  nl.po  pt_BR.po  ru.po  tr.po  zh_CN.po  zh_TW.po
scripts/: mkchangelog  mknextver  pocheck.awk
snap/: snapcraft.yaml
src/: Makefile.am  Makefile.in  abuf.c  abuf.h  android-compat.h  axel.c  axel.h  conf.c  conf.h  conn.c  conn.h  cookie.c  cookie.h  dn-match.c  ftp.c  ftp.h  hash.c  hash.h  http.c  http.h  netrc.c  netrc.h  random.c  search.c  search.h  sleep.c  sleep.h  ssl.c  ssl.h  ssl_verify.c  tcp.c  tcp.h  text.c  url.h  url.rl
tags/1.0a/: CHANGES  axel.1  axel.c  configure  conn.c  de.po  ftp.c  nl.po
tags/1.0a/gui/kapt/: axel-kapt
tags/1.0b/: CHANGES  axel.c  axel.h  configure  conn.c  http.c
tags/1.0b/gui/kapt/: axel-kapt.1  axel-kapt.desktop
tags/1.1/: axel.c  http.h  nl.po
tags/2.0/: http.h
tags/2.0/gui/kapt/: axel-kapt
tags/2.1/: axel.1  search.h
tags/2.2/: axel.c  axel.h  axel.spec  conf.c  configure  ftp.h  http.c  nl.po
tags/2.2/gui/kapt/: axel-kapt.desktop
tags/2.3/: Makefile  axel_zh_CN.1  configure  de.po  ftp.c  zh_cn.po
tags/2.4/: axel_zh_CN.1  configure  conn.c  nl.po
tags/2.4/gui/kapt/: Makefile  axel-kapt
trunk/: CHANGES  CREDITS  Makefile  README  ROADMAP  axel.1  axel.c  axel.h  axelrc.example  conf.c  conf.h  configure  conn.c  de.po  http.c  nl.po  ru.po  search.c  text.c
